# bonsai

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Warnings.cmake
docs/: .gitignore  architecture-boundaries.md  audience-and-purpose.md  design-principles.md  engineering-charter.md  repository-layout.md  roadmap.md  scope.md  subsystems.md  vision.md
include/bonsai/foundation/: version.h
include/bonsai/platform/: platform_context.h
include/bonsai/runtime/: runtime.h  runtime_config.h  runtime_host.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/foundation/: CMakeLists.txt  version.cpp
src/platform/: CMakeLists.txt  platform_context.cpp
src/runtime/: CMakeLists.txt  runtime.cpp
tests/: CMakeLists.txt
tests/foundation/: version_tests.cpp
tests/runtime/: runtime_tests.cpp
tests/smoke/: foundation_smoke.cpp
